[gd_scene load_steps=3 format=3 uid="uid://vofhagloy308"]

[ext_resource type="Script" uid="uid://dsnogseiokxbe" path="res://Scenes/food/meal_summary.gd" id="1_ql38m"]
[ext_resource type="LabelSettings" uid="uid://ckv8oeie7ixbj" path="res://resources/LabelSettings/mealSummary_label_settings.tres" id="1_wnfpm"]

[node name="MealSummary" type="Node2D"]
script = ExtResource("1_ql38m")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 200, 0, 200, 100, 0, 100)

[node name="Health" type="Label" parent="."]
offset_left = 15.0
offset_top = 40.0
offset_right = 71.0
offset_bottom = 63.0
text = "Health:"
label_settings = ExtResource("1_wnfpm")
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="."]
offset_left = 50.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 33.0
text = "[!DYN!]"
label_settings = ExtResource("1_wnfpm")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HealthResults" type="Label" parent="."]
offset_left = 79.0
offset_top = 40.0
offset_right = 183.0
offset_bottom = 63.0
text = "[!DYN!]"
label_settings = ExtResource("1_wnfpm")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Hunger" type="Label" parent="."]
offset_left = 15.0
offset_top = 68.0
offset_right = 77.0
offset_bottom = 91.0
text = "Hunger:"
label_settings = ExtResource("1_wnfpm")
metadata/_edit_use_anchors_ = true

[node name="HungerResults" type="Label" parent="."]
offset_left = 79.0
offset_top = 68.0
offset_right = 183.0
offset_bottom = 91.0
text = "[!DYN!]"
label_settings = ExtResource("1_wnfpm")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true
